--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@react-three/fiber": "8.13.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-table": "^8.20.5",
+    "@types/three": "0.153.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -38,6 +40,7 @@
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "0.153.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
