--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "supabase gen types typescript --project-id lszdhhcpjrcbciuftnit > src/types/supabase.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -56,7 +57,7 @@
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "supabase": "^1.219.2",
+    "supabase": "^1.223.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   }
