--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "cypress": "^13.15.2",
@@ -59,6 +60,8 @@
     "postcss": "^8",
     "supabase": "^1.223.10",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.6.3"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "uuid": "^11.0.3"
   }
 }
