--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "cypress": "^13.15.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "postcss": "^8",
     "supabase": "^2.0.0",
