--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
